fix(styles): update dark mode background color for handle component

--- a/src/index.css
+++ b/src/index.css
@@ -65,10 +65,6 @@
 
 @layer components {
   .handle {
-    @apply w-4 h-4 rounded-full bg-neutral-800;
+    @apply w-4 h-4 rounded-full bg-neutral-800 dark:bg-neutral-600;
   }
-}
-
-.react-flow__edge [data-value="on"] {
-  @apply stroke-green-400;
 }
